--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lenygarcia <lenygarcia@student.42.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/06 20:35:06 by lengarci          #+#    #+#              #
-#    Updated: 2025/06/26 18:12:37 by lenygarcia       ###   ########.fr        #
+#    Updated: 2025/06/28 19:33:40 by lenygarcia       ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,7 @@ SRCS	= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strle
 	  ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c get_next_line.c \
 	  ft_putchari.c ft_putnbri.c ft_putstri.c ft_putnbrui.c ft_putptr.c ft_putnbrhexmaj.c \
 	  ft_putnbrhexmin.c ft_bzero.c ft_strcmp.c ft_strcat.c ft_strcpy.c ft_strjoin_free.c \
-	  ft_memcpy.c ft_isspace.c _alloc.c
+	  ft_memcpy.c ft_isspace.c _alloc.c ft_strarrlen.c
 HEADERS	= libft.h
 OBJS	= ${SRCS:.c=.o}
 NAME	= libft.a
